# Hosseinstarship

./: .dockerignore  .env.example  .eslintignore  .gcloudignore  .gitignore  .liaraignore  .vercelignore  AGENTS.md  ARCHITECTURE_DEBT_AUDIT.md  Dockerfile  FREEZE_NOTES.md  _db2.txt  _dbcheck.py  _listfiles.py  _nb_detail.txt  _nb_funcs.txt  _nb_page.txt  _nb_screen.txt  _norm.txt  _radar.txt  _readnote.py  _readnote_out.txt  _scanfn.py  _scanfn_out.txt  _seed_main.txt  _tasks.py  _tmp.txt  _tmp2.txt  _tmp3.txt  _tmp4.txt  _tmp6.txt  _tmp_dash.txt  _tmp_inspect.txt  _tmp_widgets.txt  _usedd.txt  apply-framecardv2-phase1.ps1  apply-reader-drawing-v3.ps1  apply-starship-dashboard-replace.ps1  arvan-registry-push-failure-arvan-9.txt  chunks.ps1  (+29 more)
.codex_tmp/: prod-reader-page.html
.codex_tmp/study-cockpit-component/: package.json  pnpm-lock.yaml
.codex_tmp/study-cockpit-component/app/: globals.css  layout.tsx
.codex_tmp/study-cockpit-component/components/: Dashboard.tsx
.github/workflows/: deploy.yml  ghcr-image.yml
_quarantine_import_route/: # Code Citations.md  import type { Flashcard, Question, Noteb.ini  import { sqliteTable, text, integer, rea.js  page.tsx.bak-starship-wrap
crates/edge-parser/: Cargo.toml
crates/edge-parser/src/: lib.rs
data/: campbell-board-2025.json
data/board/: campbell-board-2025.json  campbell-manifest-raw.txt  manifest.json
data/test-batch/: chunks.json  flashcards.json  manifest.json  qc_report.json  questions.json
docs/: EDGE_IMPORT_ARCH.md  local-first-acceptance-report.md  local-first-architecture.md  local-first-audit.md  pwa-icons.md
drizzle/: 0000_first_midnight.sql  0001_note_v8_display_payload.sql  0002_note_v8_query_pushdown.sql  0003_media_assets.sql  0004_media_asset_payloads.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
ios/: StarshipPencilBridge.swift  StarshipWebViewController.swift
public/: manifest.webmanifest  offline.html  sw.js  test-srs.json
public/wasm/edge-parser/: .gitignore  edge_parser.d.ts  edge_parser.js  edge_parser_bg.wasm  edge_parser_bg.wasm.d.ts
scripts/: _audit-probe-all.ts  _audit-probe.ts  _check-db.ts  _check-state.ts  _migration-doctor.ts  _seed-and-audit.ts  _seed-chapter.ts  _seed-test-batch.ts  _skip-past-tasks.ts  _test-db-query.ts  _test-queries.ts  _verify-import.ts  apply-code-freeze-indexes.ts  audit-qbank-bias.ts  backfill-board-plan-tasks.ts  bootstrap-pglite.ts  bundle-migrations.mjs  copilot-worldkiller-note-pipeline-prompt.txt  copy-pglite-assets.mjs  copy-worldkiller-note-pipeline-prompt.ps1  delete-abu-2026-v1.ts  direct_import_uploads.py  find-console-logs.ts  find-dead-code.ts  find-unused-packages.ts  generate-app-icons.mjs  generate-pwa-icons.mjs  hash-password.mjs  import-batch.ts  import-ch164-media-assets.cjs  import-mcq.ts  import-questions.ts  inspect-planner-state.ts  normalize-import-upload.ts  remove-console-logs.ts  repair-question-chapter-assignments.ts  reset-pglite.mjs  seed-board-master-plan.ts  seed-campbell-chapters.ts  seed-dashboard-cards.ts  (+10 more)
scripts/dev/: make-media-bundle-invalid.mjs  make-media-bundle.mjs
src/: middleware.ts  sw.ts
src/app/: error.tsx  fix-topbar.ps1  globals.css  globals.css.bak-ink-v3  globals.css.bak-reader-card-spacing  layout.tsx  not-found.tsx  page.tsx  page.tsx.backup-before-login-gate-20260509-170516
src/app/analytics/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: error.tsx  loading.tsx  page.tsx  page.tsx.backup-before-v0-dashboard-merge-20260510-023513
src/app/flashcards/: page.tsx
src/app/history/: page.tsx
src/app/import/: actions.ts  error.tsx  loading.tsx  page.tsx
src/app/login/: LoginForm.tsx  page.tsx
src/app/notebooks/: layout.tsx  page.tsx
src/app/outliner/: page.tsx
src/app/planner/: PlannerClient.tsx  page.tsx
src/app/planner-v2/: PlannerV2Client.tsx  page.tsx
src/app/profile/: loading.tsx  page.tsx
src/app/qbank/: QBankEntryPage.tsx  QBankScreen.tsx  page.tsx
src/app/settings/: SettingsScreen.tsx  page.tsx
src/app/space/: page.tsx
src/app/ui-preview/: layout.tsx  page.tsx
src/app/yield/: page.tsx
src/components/: ReaderHighlightStyles.tsx  ReaderHighlightStyles.tsx.bak-readwise-20260508-163305  ShellGate.tsx  study-cockpit-panels.tsx  study-cockpit-shell.tsx
src/components/Theme/: ThemeBridge.tsx
src/components/algorithms/: AlgorithmCanvas.tsx  AlgorithmCheckpoints.tsx  AlgorithmDetailsPanel.tsx  AlgorithmEdgeLayer.tsx  AlgorithmEmptyState.tsx  AlgorithmErrorState.tsx  (+12 more)
src/db/: auto-seed.ts  config.ts  index.ts  pglite-browser.ts  pglite-opfs.worker.ts  pglite.ts  postgres.ts  schema.ts  seed-abu-2026-v2.ts  seed-abu-2026.ts
src/hooks/: use-animation-pause.ts  use-mobile.ts  use-toast.ts  useActiveBlockAnchor.ts  useAutoHighlight.ts  useAutoHighlight.ts.backup-before-replace-20260509-193350  useCollections.ts  useDb.ts  useEntitySyncStatus.ts  useExamKeyboard.ts  useFocusMode.ts  useFontScale.ts  useMissedQuestionIds.ts  useNavScroll.ts  useOptimisticFlashcard.ts  usePalmBeforePenGuard.ts  usePanelState.ts  useQuestionNote.ts  useReaderAnnotations.ts  useReaderFontSize.ts  useReaderFullscreen.ts  useReaderPenSelection.ts  useReaderSelectionWatcher.ts  useReaderSettings.ts  useReaderUserNotes.ts  useReadingProgress.ts  useScrollSpy.ts  useStatusMachine.ts  useStrikethrough.ts  useSyncAgo.ts  useSyncOnReconnect.ts  useSyncStatus.ts  useUndo.ts
src/lib/: crdt-manager.ts  crdt-test-utils.ts  import-utils.ts  readerHighlightPalette.ts  readerHighlightPalette.ts.backup-before-replace-20260509-193350  utils.ts
src/providers/: ThemeProvider.tsx
src/store/: useAppStore.ts  useExamStore.ts  useThemeStore.ts
src/styles/: clinical-tokens.css  lib-tokens.css  medical-typography.css  reader-2027.css  reader-anchor.css  reader-fullscreen.css  reader-highlights.css
src/types/: algorithm-ir-v4.ts  algorithm-ir.ts  annotation.ts  exam.ts  index.ts  mcq-review.ts  mermaid.d.ts
src/workers/: edge-import.worker.ts  parser-contract.ts  parser-fallback.ts  use-edge-import.ts
uro-killer/: .gitignore  package.json
(+604 files in other folders)
